--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body{
 }
 .info{
     color: rgb(156, 78, 117);
-    background-image: url(../CSCI202/pinkmarble.jpg);
+    background-image: url(pinkmarble.jpg);
     min-height: 100px;
     background-size: cover;
     background-position: center;
